# vt-rust

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: api.md  openapi.txt  websockets.md
migrations/: 20240910070341_init.down.sql  20240910070341_init.up.sql  20250303011408_update_pet.down.sql  20250303011408_update_pet.up.sql  20250303155530_create_images.down.sql  20250303155530_create_images.up.sql  20250304000000_add_updated_at_to_messages.down.sql  20250304000000_add_updated_at_to_messages.up.sql  20250304000001_fix_conversations_trigger.down.sql  20250304000001_fix_conversations_trigger.up.sql  20250304000002_make_pet_fields_required.down.sql  20250304000002_make_pet_fields_required.up.sql
src/: main.rs  models.rs  utils.rs  websockets.rs
src/services/: conversations.rs  mod.rs
tests/: test_get_profiles.rs  test_image_upload.rs  test_login.rs  test_register.rs  test_request_verification_code.rs  test_update_pet.rs  test_websocket.rs  testing_utils.rs
