[package]
name = "vt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4.0", features = ["openssl"] }
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
ed25519-dalek = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.0"
aes-gcm = "0.10"
rand = "0.8"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
futures = "0.3"
anyhow = "1.0"
google-cloud-storage = "0.24.0"
google-cloud-default = "0.4.0"
actix-multipart = "0.7.2"
mime = "0.3"
url = "2.3"
percent-encoding = "2.3"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros", "rt-multi-thread"] }
rand = "0.8"
once_cell = "1.17.1"
tungstenite = "0.20"
tokio-tungstenite = "0.17"
reqwest = { version = "0.11", features = ["json", "multipart"] }
